@@ -1,1 +1,5 @@
 # CS290B
+
+
+
+VM Options: -Djava.security.manager -Djava.security.policy=policy
